# StartCli

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md
.github/workflows/: gcc_msvc.yml  gcc_msvc_clang.yml
start/: CMakeLists.txt  Dockerfile  conanfile.py
start/config/: CMakeLists.txt
start/config/include/: StartupConfig.h
start/config/src/: StartupConfig.cpp
start/config/tests/: CMakeLists.txt  StartupConfig_tests.cpp
start/main/: CMakeLists.txt  main.cpp
start/scripts/: compiler_warnings.cmake  create_package.bat  create_package.sh  format_code.sh  static_checking.cmake
